--- a/src/app/survey-manager/survey/update/update.component.html
+++ b/src/app/survey-manager/survey/update/update.component.html
@@ -1,12 +1,19 @@
-<body class="boundary">
+<body>
+  <div class="formblock">
+  <br />
+  <br />
   <ng-container *ngIf="survey">
+    <div id="headline">
+      Édition d'un questionnaire
+    </div>
+    <br />
+    <br />
+    <br />
     <mat-card class="survey-card">
       <mat-card-title>
-        <h2 class="title">{{ survey.title }}</h2>
+        <h2>{{ survey.title }}</h2>
       </mat-card-title>
       <mat-card-content>
-        <br />
-        <br />
         <div
           cdkDropList
           #todoList="cdkDropList"
@@ -73,4 +80,5 @@
 
     <button type="submit" (click)="onSubmit()">Enregistrer</button>
   </ng-container>
+  </div>
 </body>
