--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.scss
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.scss
@@ -15,7 +15,17 @@
 
 ::ng-deep .mat-focused .mat-form-field-label {
   color: #2d3041 !important;
+
 }
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick{
+  color: red!important;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+  color: #9698a0!important;
+}
+
 
 ::ng-deep .mat-focused .mat-form-field-outline {
   color: #2d3041 !important;
