--- a/src/app/survey-manager/survey/update/update.component.scss
+++ b/src/app/survey-manager/survey/update/update.component.scss
@@ -1,39 +1,57 @@
-body {
+#headline {
+  font-family: arial, sans-serif;
+  text-align: left;
+  font-size: 26px;
+  font-weight: bolder;
+  color: #2d3041;
+  left: 500px;
+  top: 100px;
+}
+
+.formblock {
+  font-family: arial, sans-serif;
+  font-size: 20px;
   height: auto;
   border-collapse: collapse;
   margin-left: 500px;
+  margin-right: auto;
   margin-top: 32px;
+  width: 960px;
   color: #2d3041;
-}
-.title {
-  font-size: inherit;
-  display: inline;
-  vertical-align: revert;
 }
 
 mat-card {
-  border-bottom: 1px solid #2d3041;
   display: inline-block;
   vertical-align: top;
 
   &.survey-card {
     width: 50%;
     margin-bottom: 32px;
+    box-shadow: none;
   }
 
   &.questions-list-card {
-    margin-left: 75px;
+    margin-left: 100px;
+    box-shadow: none;
+    position: fixed;
   }
 
   mat-card-title {
-    background-color: #9698a0;
-    margin: 0;
-    padding: 15px 15px;
-    border-radius: 5px;
+    padding: 10px;
+    padding-top: 15px;
+    padding-bottom: 5px;
+    border-radius: .4em;
+    text-align: center;
+    font-size: 28px;
+    line-height: 28px;
+    color:#2d3041;
+    border: solid 1px;
+    border-color:#9698a0;
+
   }
 
   .question-title {
-    font-size: large;
+    font-size: 20px;
   }
 
   .choices {
@@ -60,34 +78,46 @@ button {
   }
 }
 
-//////////////////////////////////////////////////////////////////////////////////////////////
-///
-///
-
 .questions-list {
-  border: solid 1px #ccc;
+  border: solid 1px;
+  border-color:#9698a0;
   min-height: 60px;
   background: white;
-  border-radius: 4px;
+  border-radius: .4em;
   overflow: hidden;
+
+  &:hover {
+    border-color: #2d3041;
+  }
 }
 
 .question {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-
+  padding: 10px;
+  color: #2d3041;
   box-sizing: border-box;
+  border-bottom: solid 1px;
+  border-color:#9698a0;
   cursor: move;
   background: white;
-  font-size: 14px;
+  font-size: 18px;
+  box-shadow: none;
+  line-height: 24px;
+
+  &:hover {
+    background-color: #2d3041;
+    color: white;
+  }
 }
 
 .cdk-drag-preview {
   box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  border-radius: .4em;
+  border-color: #2d3041;
+  color: white;
+  background-color: #2d3041;
+  font-size: 18px;
+  box-shadow: none;
+  line-height: 24px;
 }
 
 .cdk-drag-placeholder {
