--- a/src/app/survey-manager/survey/update/update.component.html
+++ b/src/app/survey-manager/survey/update/update.component.html
@@ -11,7 +11,7 @@
     <br />
     <mat-card class="survey-card">
       <mat-card-title>
-        <input class="title" value="Nouveau" />
+        <input class="title" value="Titre" />
       </mat-card-title>
       <mat-card-content>
         <div
@@ -22,13 +22,13 @@
           class="questions-list"
           (cdkDropListDropped)="drop($event)"
         >
-          <div
+          <div 
             class="question"
             cdkDragBoundary=".boundary"
             *ngFor="let questionite of questionsSurvey; index as i"
             cdkDrag
           >
-            <app-edit-question
+            <app-edit-question style="line-height: 24px;"
               [(inputQuestion)]="questionsSurvey[i]"
             ></app-edit-question>
           </div>
