--- a/src/app/survey-manager/survey/update/update.component.scss
+++ b/src/app/survey-manager/survey/update/update.component.scss
@@ -25,13 +25,14 @@ mat-card {
   vertical-align: top;
 
   &.survey-card {
-    width: 50%;
+    width: 600px;
     margin-bottom: 32px;
     box-shadow: none;
+    border-radius: .4em;
   }
 
   &.questions-list-card {
-    margin-left: 100px;
+    margin-left: 40px;
     box-shadow: none;
     position: fixed;
   }
@@ -40,14 +41,23 @@ mat-card {
     padding: 10px;
     padding-top: 15px;
     padding-bottom: 5px;
+    border: solid 1px;
+    border-color: #9698a0;
     border-radius: .4em;
     text-align: center;
     font-size: 28px;
     line-height: 28px;
-    color:#2d3041;
-    border: solid 1px;
-    border-color:#9698a0;
+    color: #2d3041;
+  }
 
+  mat-card-content {
+    padding-top: 15px;
+    padding-bottom: 5px;
+    border-radius: .4em;
+    text-align: left;
+    font-size: 28px;
+    line-height: 28px;
+    color: #2d3041;
   }
 
   .question-title {
@@ -80,7 +90,7 @@ button {
 
 .questions-list {
   border: solid 1px;
-  border-color:#9698a0;
+  border-color: #9698a0;
   min-height: 60px;
   background: white;
   border-radius: .4em;
@@ -96,7 +106,7 @@ button {
   color: #2d3041;
   box-sizing: border-box;
   border-bottom: solid 1px;
-  border-color:#9698a0;
+  border-color: #9698a0;
   cursor: move;
   background: white;
   font-size: 18px;
@@ -139,4 +149,17 @@ button {
 
 .questions-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+
+input {
+  border-radius: .4em;
+  border: none;
+  width: 100%;
+  line-height: 20px;
+
+  &:focus {
+    outline: none;
+  }
+
 }
