--- a/src/app/survey-manager/survey/list/list.component.html
+++ b/src/app/survey-manager/survey/list/list.component.html
@@ -18,7 +18,7 @@
       <ng-container *ngFor="let survey of surveys">
         <tr>
           <td style="width: 80px">
-            <span mat-mini-flat class="material-icons style3" style="color: white;">
+            <span mat-mini-flat class="material-icons style3" style="color: white; cursor: default;">
               <mat-icon>assignment</mat-icon>
             </span>
 
