--- a/src/app/poes/component/poepanorama/poepanorama.component.scss
+++ b/src/app/poes/component/poepanorama/poepanorama.component.scss
@@ -226,3 +226,16 @@ button {
   }
 
 }
+
+::selection{background-color: salmon; color: white;}
+.parallax > use{
+  animation:move-forever 12s linear infinite;
+  &:nth-child(1){animation-delay:-2s;}
+  &:nth-child(2){animation-delay:-2s; animation-duration:5s}
+  &:nth-child(3){animation-delay:-4s; animation-duration:3s}
+}
+
+@keyframes move-forever{
+  0%{transform: translate(-90px , 0%)}
+  100%{transform: translate(85px , 0%)} 
+}
