--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -97,7 +97,7 @@
               {{ stagiaire.firstName }}
             </td>
             <td style="width: 160px; text-align: left">
-              {{ stagiaire.birthDate | date : "L/dd/yyyy" }}
+              {{ stagiaire.birthDate | date : "dd/MM/YYYY" }}
             </td>
             <td style="width: 150px">
               <button
