Yes no et boutton + - choice

--- a/src/app/survey-manager/questions/boolean/boolean.component.html
+++ b/src/app/survey-manager/questions/boolean/boolean.component.html
@@ -1,5 +1,4 @@
 <mat-radio-group>
-  <mat-radio-button *ngFor="let choice of choices" [value]="choice">
-    {{ choice.name }}
-  </mat-radio-button>
+  <mat-radio-button value="Oui">Oui</mat-radio-button>
+  <mat-radio-button value="Non">Non</mat-radio-button>
 </mat-radio-group>
