--- a/src/app/survey-manager/questions/edit-question/edit-question.component.html
+++ b/src/app/survey-manager/questions/edit-question/edit-question.component.html
@@ -3,13 +3,11 @@
   <div *ngIf="shouldShowTitleRequiredError()">Question is required.</div>
   <div>
     <ng-container *ngIf="question.questionType == QuestionType.YES_NO">
-      <app-boolean [choices]="question.choices"></app-boolean>
+      <app-boolean></app-boolean>
     </ng-container>
 
     <ng-container *ngIf="question.questionType == QuestionType.QCM">
-      <app-multiple-choices
-        [(choices)]="question.choices"
-      ></app-multiple-choices>
+      <app-multiple-choices [choices]="question.choices"></app-multiple-choices>
     </ng-container>
 
     <ng-container *ngIf="question.questionType == QuestionType.FREE_RESPONSE">
