--- a/src/app/survey-manager/survey/update/update.component.html
+++ b/src/app/survey-manager/survey/update/update.component.html
@@ -55,7 +55,7 @@
       </div>
     </mat-card>
 
-    <button style="margin-top: 0px; margin-left: 464px;" type="submit" (click)="onSubmit()">Enregistrer</button>
+    <button style="margin-top: 0px; margin-left: 464px;" type="submit" >Enregistrer</button>
   </ng-container>
   </div>
 
