--- a/src/app/survey-manager/questions/free-response/free-response.component.html
+++ b/src/app/survey-manager/questions/free-response/free-response.component.html
@@ -1,7 +1,7 @@
 <textarea
   matInput
   #textarea
-  placeholder="Votre réponse"
+  placeholder="Votre réponse."
   maxlength="850"
   cdkTextareaAutosize
   cdkAutosizeMinRows="10"
