--- a/src/app/survey-manager/questions/multiple-choices/multiple-choices.component.html
+++ b/src/app/survey-manager/questions/multiple-choices/multiple-choices.component.html
@@ -2,7 +2,7 @@
   <mat-radio-group>
     <mat-radio-button *ngFor="let choice of choices" [value]="choice">
       <input type="text" formControlName="choiceName" [ngModel]="choice.name" />
-      <div *ngIf="shouldShowChoiceNameRequiredError()">Choice is required.</div>
+      <div *ngIf="shouldShowChoiceNameRequiredError() "style="color: red;">Answer is required.</div>
     </mat-radio-button>
   </mat-radio-group>
 </form>
