--- a/src/app/survey-manager/questions/edit-question/edit-question.component.html
+++ b/src/app/survey-manager/questions/edit-question/edit-question.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="questionForm">
-  <input type="text" formControlName="title" [ngModel]="question.title" />
-  <div *ngIf="shouldShowTitleRequiredError()">Question is required.</div>
+  <input type="text" formControlName="title" [ngModel]="question.title" placeholder="Votre réponse."/>
+  <div *ngIf="shouldShowTitleRequiredError()" style="color: red;">Question is required.</div>
   <div>
     <ng-container *ngIf="question.questionType == QuestionType.YES_NO">
       <app-boolean [choices]="question.choices"></app-boolean>
